--- a/00_torcheval.ipynb
+++ b/00_torcheval.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19f8b3b-0d9f-4dc3-8bbd-f8d62f6a1557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torcheval wandb timm fastprogress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e913ef-68fd-4b91-b20f-404532075d28",
+   "metadata": {},
+   "source": [
+    "# Torcheval: A PyTorch metrics library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf7269ca-a458-4d79-bbf3-3b5bbeb4dcab",
+   "metadata": {},
+   "source": [
+    "This is the code for the following Weights and Biases [report](http://wandb.me/torcheval)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0fef4dd3-1825-4064-a555-47757c23360d",
    "metadata": {},
@@ -135,6 +161,14 @@
    "metadata": {},
    "source": [
     "## Example usage:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb6ecece-bba2-4802-9e80-9508a7a862a4",
+   "metadata": {},
+   "source": [
+    "Here we will show a minimal example of how to use torcheval integration on a trianing loop"
    ]
   },
   {
