--- a/00_torcheval.ipynb
+++ b/00_torcheval.ipynb
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "WANDB_PROJECT = \"torcheval\"\n",
-    "WANDB_ENTITY = \"capecape\""
+    "WANDB_ENTITY = None"
    ]
   },
   {
